--- a/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/ConstrainedMixers.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "$$U_f \\ket{0} = \\ket{\\psi_f}$$\n",
     "    \n",
-    "We now [conjugate](/reference/quantum_environments/conjugation_environment.html) a multi-controlled Phase-Gate controlled on the $\\ket{0}$ state with $U_f$. This yields the following unitary:\n",
+    "We now [conjugate](../../../reference/Quantum%20Environments/ConjugationEnvironment.rst) a multi-controlled Phase-Gate controlled on the $\\ket{0}$ state with $U_f$. This yields the following unitary:\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
