--- a/documentation/source/general/tutorial/QAOAtutorial/MaxCut.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/MaxCut.ipynb
@@ -637,7 +637,7 @@
     "I. define **CLASSICAL COST FUNCTION** of the problem you want to implement: ``maxcut_cost_funct(counts)``, \n",
     "II. define the **INITIAL STATE** if it is not the superposition, which is set by default,  \n",
     "III. define **COST OPERATOR aka PHASE SEPARATOR** (or use the ones specified in [From QAOA to QAOA](https://arxiv.org/abs/1709.03489)) like ``apply_cost_operator`` above, and \n",
-    "IV. select **MIXER** from the [assortment we provide and list here](/reference/MIXers).\n",
+    "IV. select **MIXER** from the [assortment we provide and list here](../../../reference/Algorithms/qaoa/QAOAMixers.rst).\n",
     "\n",
     "Let's condense all of the above, and implement QAOA for MaxCut one last time in one block of code"
    ]
