--- a/documentation/source/general/tutorial/QAOAtutorial/MkCS.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/MkCS.ipynb
@@ -128,12 +128,12 @@
     "\n",
     "## M$\\kappa$CS meets QAOAProblem\n",
     "\n",
-    "Let's revisit the recipe from the previous tutorial; to implement QAOA with [QAOAProblem](/reference/QAOAProblem) one needs to *drumroll please...*\n",
+    "Let's revisit the recipe from the previous tutorial; to implement QAOA with [QAOAProblem](../../../reference/Algorithms/qaoa/QAOAProblem.rst) one needs to *drumroll please...*\n",
     "\n",
     "I. define the **CLASSICAL COST FUNCTION** of the problem, \n",
     "II. define the **INITIAL STATE** if it is not the superposition, which in the case of graph coloring indeed is not,  \n",
     "III. define **COST OPERATOR aka PHASE SEPARATOR** (or use the ones specified in [From QAOA to QAOA](https://arxiv.org/abs/1709.03489)), and \n",
-    "IV. select **MIXER** from the [assortment we provide and list here](/reference/MIXers).\n",
+    "IV. select **MIXER** from the [assortment we provide and list here](../../../reference/Algorithms/qaoa/QAOAMixers.rst).\n",
     "\n",
     "Time to prepare the ingrediends starting with defining a graph and the available colors we'd like to color the graph with."
    ]
@@ -221,7 +221,7 @@
    "source": [
     "As spoiled before, the superposition state is not the ideal initial state in this particular case. In principle a superposition state is viable, however, it needs to respect the one-hot encoding constraint. Instead we simply pick a random initial coloring of all the nodes and trust the QAOA to do the rest.\n",
     "\n",
-    "To do this one first needs to import randomness and define the quantum argument ``qarg``, which is in this case a [QuantumArray](/reference/QuantumArray) of QuantumColors. After setting the initial set to a random coloring, we then define a function that sets all elements in ``qarg`` to the initial state."
+    "To do this one first needs to import randomness and define the quantum argument ``qarg``, which is in this case a QuantumArray of QuantumColors. After setting the initial set to a random coloring, we then define a function that sets all elements in ``qarg`` to the initial state."
    ]
   },
   {
@@ -292,7 +292,7 @@
    "id": "c598c09a",
    "metadata": {},
    "source": [
-    "We can see the advantage of the one-hot encoding: It might require more qubits but the comparison of two colors only requires one [cp](../../../reference/Primitives/generated/qrisp.cp.rst) gate per color. The binary encoding requires significantly less qubits but also an [mcp](../../../reference/Primitives/generated/qrisp.mcp.html) gate, which is more costly, especially on near-term hardware.\n",
+    "We can see the advantage of the one-hot encoding: It might require more qubits but the comparison of two colors only requires one [cp](../../../reference/Primitives/generated/qrisp.cp.rst) gate per color. The binary encoding requires significantly less qubits but also an [mcp](../../../reference/Primitives/generated/qrisp.mcp.rst) gate, which is more costly, especially on near-term hardware.\n",
     "\n",
     "To season everything we need to decide on which [mixer](../../../reference/Algorithms/qaoa/QAOAMixers.rst) to choose to allow the transitions between different colorings. As proposed in [QAOAnsatz](https://arxiv.org/abs/1709.03489)  we will use the XY mixer aka the parity ring mixer. As for the binary encoding the X mixer we used in MaxCut works fine as well."
    ]
@@ -389,7 +389,7 @@
    "source": [
     "🎉 aaand time! Whew, a new personal best! 🎉\n",
     "\n",
-    "One can now benchmark the approach using the [benchmark](../../..reference/Algorithms/qaoa/generated/qrisp.qaoa.QAOAProblem.benchmark.rst) method following the same procedure as explained in the MaxCut QAOA tutorial, and conquer a complex problem instance like the Max-$\\kappa$-Coloring Subgraph using Qrisp and the plethora of useful functionalities and customizabilities it brings.\n",
+    "One can now benchmark the approach using the [benchmark](../../../reference/Algorithms/qaoa/generated/qrisp.qaoa.QAOAProblem.benchmark.rst) method following the same procedure as explained in the MaxCut QAOA tutorial, and conquer a complex problem instance like the Max-$\\kappa$-Coloring Subgraph using Qrisp and the plethora of useful functionalities and customizabilities it brings.\n",
     "\n",
     "## Summary and motivation\n",
     "\n",
