--- a/documentation/source/general/tutorial/QAOAtutorial/PortfolioRebalancing.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/PortfolioRebalancing.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Portfolio rebalancing with constrained mixers\n",
-    "In this tutorial we will explain how solve discrete portfolio rebalancing problems within the scope of the [Alternating Operator Ansatz](/reference/AOA).\n",
+    "In this tutorial we will explain how solve discrete portfolio rebalancing problems within the scope of the [Alternating Operator Ansatz](../../../reference/Algorithms/qaoa/QAOA.rst).\n",
     "\n",
     "Portofolio rebalancing is well studied and widely applicable problem in the world of financial mathematics. Possible quantum algorithms for improvements have been investigated in the last years. Within Qrisp we have created the infrastructure to employ the findings in a straight forward manner!\n",
     "\n",
