--- a/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/QUBO.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# QUBO as a QAOAProblem\n",
     "\n",
-    "In this tutorial you'll be guided through the process of defining a new phase separator to be used within the scope of the [Alternating Operator Ansatz](/reference/AOA) focussed on solving various QUBO problems with only needing the QUBO matrix $Q$ as an input.\n",
+    "In this tutorial you'll be guided through the process of defining a new phase separator to be used within the scope of the [Alternating Operator Ansatz](../../../reference/Algorithms/qaoa/QAOA.rst) focussed on solving various QUBO problems with only needing the QUBO matrix $Q$ as an input.\n",
     "QUBO, or [Quadratic Unconstrained Binary Optimization](https://en.wikipedia.org/wiki/Quadratic_unconstrained_binary_optimization), is a type of problem that involves optimizing a quadratic function of binary variables.\n",
     "\n",
     "After first translating the QUBO Hamiltonian $H_C$ from the binary basis $x_i$​ to the state basis with the translation $x_i\\rightarrow \\frac{\\mathbb{I}-Z_i}{2}$, we'll construct the phase separator unitary and run QAOA to solve the set partitioning problem.\n",
