--- a/documentation/source/general/tutorial/QIROtutorial.ipynb
+++ b/documentation/source/general/tutorial/QIROtutorial.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Quantum-Informed Recursive Optimization\n",
     "\n",
-    "This tutorial will give you an overview of problem specific implementations for solving optimization problems with the [Quantum Approximate Optimization Algorithm (QAOA)](/reference/Algorithms/qaoa/QAOA.html).\n",
+    "This tutorial will give you an overview of problem specific implementations for solving optimization problems with the [Quantum Approximate Optimization Algorithm (QAOA)](../../reference/Algorithms/qaoa/QAOA.rst).\n",
     "\n",
-    "The Quantum Approximate Optimization Algorithm (QAOA), is used to solve combinatorical optimization problem instances of NP-hard problems. For further information see our [tutorial on QAOA](QAOAtutorial/index.html)! \n",
+    "The Quantum Approximate Optimization Algorithm (QAOA), is used to solve combinatorical optimization problem instances of NP-hard problems. For further information see our tutorial on [QAOA](../tutorial/QAOAtutorial/index.rst)! \n",
     "\n",
     "The paper [Quantum-Informed Recursive Optimization Algorithms (2023)](https://journals.aps.org/prxquantum/abstract/10.1103/PRXQuantum.5.020327) by J. Finzgar et. al. establishes a blueprint for developing alogrithms that update the problem instance recursively, based on the correlations in results obtained by QAOA.\n",
     "While QAOA cost functions are designed with specific problem instances in mind, this research has shown promising improvements to this to approach by further leveraging the problem structure.\n",
@@ -83,7 +83,7 @@
     "* If $\\text{M}_{ij} < 0, (i, j) ∈ E$ was selected, we remove all vertices that share an edge with both vertices $i$ and $j$. Since one of the vertices $i$ and $j$ will be part of the final solution (but not both), any vertex that is connected to both $i$ and $j$ is guaranteed to violate the problem constraints, and can be removed from the graph. In this case, it may be possible that no vertex is found to be a canditate for being removed. We will then simply choose the second biggest absolute value of **M** for the replacement routine.\n",
     "\n",
     "\n",
-    "These operations are performed on a copy of the ``networkx`` graph that was provided to the instance of the [QIROProblem](../../reference/Algorithms/qiro/QIRO.rst) class, see the code example below. \n",
+    "These operations are performed on a copy of the ``networkx`` graph that was provided to the instance of the [QIROProblem](../../reference/Algorithms/qiro/QIROProblem.rst) class, see the code example below. \n",
     "Based on the reduced problem graph, the ``cost_operator``, ``mixer``, and ``init_function`` are updated.\n",
     "Subsequently, we optimize the parameters for the simplified ``QAOAProblem`` instance, and reduce the problem again with the same subroutine as described above."
    ]
@@ -322,7 +322,7 @@
    "id": "83eb712f",
    "metadata": {},
    "source": [
-    "With this, we can directly throw everything that is relevant at the [QIROProblem](../../qiro/QIRO.rst) class and create an instance."
+    "With this, we can directly throw everything that is relevant at the QIROProblem class and create an instance."
    ]
   },
   {
