--- a/documentation/source/general/tutorial/Shor.ipynb
+++ b/documentation/source/general/tutorial/Shor.ipynb
@@ -140,7 +140,7 @@
    "id": "49022854",
    "metadata": {},
    "source": [
-    "This snippet creates such a [QuantumVariable](../../reference/Core/Quantum%20Variable.rst) with modulus $N = 13$. Subsequently we encode the value 8. The defining feature of this type is the fact that arithmetic is always modular."
+    "This snippet creates such a [QuantumVariable](../../reference/Core/QuantumVariable.rst) with modulus $N = 13$. Subsequently we encode the value 8. The defining feature of this type is the fact that arithmetic is always modular."
    ]
   },
   {
