--- a/documentation/source/general/changelog/0.7.rst
+++ b/documentation/source/general/changelog/0.7.rst
@@ -55,8 +55,8 @@ New Tutorials
 
 Next to a major visual revamp of the :ref:`tutorial` page, the following tutorials have been added.
 
-* :ref:`HHL_tutorial`, explaining how to implement the HHL algorithm using Jasp.
-* :ref:`JaspQAOAtutorial`, explaining how to create your own Jasp implementation of QAOA from scratch.
+* A tutorial, explaining how to implement the HHL algorithm using Jasp.
+* A tutorial, explaining how to create your own Jasp implementation of QAOA from scratch.
 
 UI Changes
 ----------
