Minor update HHL tutorial

--- a/documentation/source/general/tutorial/HHL.ipynb
+++ b/documentation/source/general/tutorial/HHL.ipynb
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "338702b1",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,8 @@
     "    \n",
     "    cancellation_bool = (measure(case_indicator) == 0) & (measure(qbl) == 0)\n",
     "\n",
-    "    # The first return value is a boolean. Additional return values are QuantumVariables.\n",
+    "    # The first return value is a boolean. \n",
+    "    # Additional return values are QuantumVariables.\n",
     "    return cancellation_bool, qf, qpe_res, inv_res"
    ]
   },
