Code formattig MaxCut tutorial

--- a/documentation/source/general/tutorial/QAOAtutorial/MaxCut.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/MaxCut.ipynb
@@ -38,8 +38,8 @@
     "from sympy import Symbol\n",
     "\n",
     "G = nx.Graph()\n",
-    "G.add_edges_from([[0,3],[0,4],[1,3],[1,4],[2,3],[2,4]])\n",
-    "#nx.draw(G, with_labels=True)\n",
+    "G.add_edges_from([[0, 3], [0, 4], [1, 3], [1, 4], [2, 3], [2, 4]])\n",
+    "# nx.draw(G, with_labels=True)\n",
     "N = G.number_of_nodes()"
    ]
   },
@@ -64,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gamma = Symbol('γ')\n",
+    "gamma = Symbol(\"γ\")\n",
+    "\n",
     "\n",
     "def apply_cost_operator(qv, gamma):\n",
     "    for pair in list(G.edges()):\n",
@@ -92,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beta = Symbol('β')\n",
+    "beta = Symbol(\"β\")\n",
+    "\n",
     "\n",
     "def apply_mixer(qv, beta):\n",
     "    for i in range(0, N):\n",
@@ -201,10 +203,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def maxcut_obj(x):                              \n",
+    "def maxcut_obj(x):\n",
     "    cut = 0\n",
     "    for i, j in G.edges():\n",
-    "        if x[i] != x[j]:                         \n",
+    "        if x[i] != x[j]:\n",
     "            cut -= 1\n",
     "    return cut"
    ]
@@ -253,11 +255,12 @@
    "source": [
     "p = 3\n",
     "\n",
+    "\n",
     "def apply_p_layers(qv, beta, gamma):\n",
-    "    assert(len(beta) == len(gamma))\n",
+    "    assert len(beta) == len(gamma)\n",
     "    p = len(beta)\n",
-    "    h(qv)                                        \n",
-    "    for i in range(p):                           \n",
+    "    h(qv)\n",
+    "    for i in range(p):\n",
     "        apply_cost_operator(qv, gamma[i])\n",
     "        apply_mixer(qv, beta[i])\n",
     "    barrier(qv)\n",
@@ -283,7 +286,7 @@
     "    qv_p = QuantumVariable(N)\n",
     "    beta = theta[:p]\n",
     "    gamma = theta[p:]\n",
-    "    qv = apply_p_layers(qv_p,beta, gamma)\n",
+    "    qv = apply_p_layers(qv_p, beta, gamma)\n",
     "    results = qv.get_measurement()\n",
     "    return maxcut_cost_funct(results)"
    ]
@@ -331,19 +334,30 @@
     "\n",
     "init_point = np.pi * np.random.rand(2 * p)\n",
     "\n",
-    "res_sample = minimize(quantum_objective, init_point, method='COBYLA', options={'maxiter':50})\n",
+    "res_sample = minimize(\n",
+    "    quantum_objective, init_point, method=\"COBYLA\", options={\"maxiter\": 50}\n",
+    ")\n",
     "\n",
-    "optimal_theta = res_sample['x']\n",
+    "optimal_theta = res_sample[\"x\"]\n",
     "qv_p = QuantumVariable(N)\n",
     "qv = apply_p_layers(qv_p, optimal_theta[:p], optimal_theta[p:])\n",
     "results = qv_p.get_measurement()\n",
     "\n",
-    "best_cut, best_solution = min([(maxcut_obj(x),x) for x in results.keys()], key=itemgetter(0))\n",
+    "best_cut, best_solution = min(\n",
+    "    [(maxcut_obj(x), x) for x in results.keys()], key=itemgetter(0)\n",
+    ")\n",
     "print(f\"Best string: {best_solution} with cut: {-best_cut}\")\n",
     "\n",
-    "colors = ['r' if best_solution[node] == '0' else 'b' for node in G]\n",
-    "nx.draw(G, with_labels = True, font_color='white', node_size=1000, font_size=22,\n",
-    "        node_color = colors, pos=nx.bipartite_layout(G, [node for node in G if best_solution[node] == '0']))"
+    "colors = [\"r\" if best_solution[node] == \"0\" else \"b\" for node in G]\n",
+    "nx.draw(\n",
+    "    G,\n",
+    "    with_labels=True,\n",
+    "    font_color=\"white\",\n",
+    "    node_size=1000,\n",
+    "    font_size=22,\n",
+    "    node_color=colors,\n",
+    "    pos=nx.bipartite_layout(G, [node for node in G if best_solution[node] == \"0\"]),\n",
+    ")"
    ]
   },
   {
@@ -409,7 +423,7 @@
     "\n",
     "maxcut_instance = QAOAProblem(apply_cost_operator, RX_mixer, maxcut_cost_funct)\n",
     "\n",
-    "res = maxcut_instance.run(qarg, depth, max_iter = 50) # runs the simulation"
+    "res = maxcut_instance.run(qarg, depth, max_iter=50)  # runs the simulation"
    ]
   },
   {
@@ -422,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "fdab4fb9",
    "metadata": {},
    "outputs": [
@@ -436,16 +450,27 @@
     }
    ],
    "source": [
-    "best_cut, best_solution = min([(maxcut_obj(x),x) for x in res.keys()], key=itemgetter(0))\n",
+    "best_cut, best_solution = min(\n",
+    "    [(maxcut_obj(x), x) for x in res.keys()], key=itemgetter(0)\n",
+    ")\n",
     "print(f\"Best string: {best_solution} with cut: {-best_cut}\")\n",
     "\n",
     "res_str = list(res.keys())[0]\n",
     "print(\"QAOA solution: \", res_str)\n",
-    "best_cut, best_solution = (maxcut_obj(res_str),res_str)\n",
+    "best_cut, best_solution = (maxcut_obj(res_str), res_str)\n",
     "\n",
-    "#colors = ['r' if best_solution[node] == '0' else 'b' for node in G]\n",
-    "#nx.draw(G, with_labels = True, font_color='white', node_size=1000, font_size=22,\n",
-    "#        node_color = colors, pos=nx.bipartite_layout(G, [node for node in G if best_solution[node] == '0']))"
+    "\"\"\"\n",
+    "colors = [\"r\" if best_solution[node] == \"0\" else \"b\" for node in G]\n",
+    "nx.draw(\n",
+    "    G,\n",
+    "    with_labels=True,\n",
+    "    font_color=\"white\",\n",
+    "    node_size=1000,\n",
+    "    font_size=22,\n",
+    "    node_color=colors,\n",
+    "    pos=nx.bipartite_layout(G, [node for node in G if best_solution[node] == \"0\"]),\n",
+    ")\n",
+    "\"\"\""
    ]
   },
   {
@@ -512,22 +537,23 @@
     }
    ],
    "source": [
-    "print('RND')\n",
+    "print(\"RND\")\n",
     "\n",
-    "benchmark_data = maxcut_instance.benchmark(qarg = QuantumVariable(len(G)),\n",
-    "                       depth_range = [1,2,3,4,5],\n",
-    "                       shot_range = [1000, 10000],\n",
-    "                       iter_range = [100, 200],\n",
-    "                       optimal_solution = '00011',\n",
-    "                       repetitions = 1,\n",
-    "                       init_type= 'random'\n",
-    "                       )\n",
+    "benchmark_data = maxcut_instance.benchmark(\n",
+    "    qarg=QuantumVariable(len(G)),\n",
+    "    depth_range=[1, 2, 3, 4, 5],\n",
+    "    shot_range=[1000, 10000],\n",
+    "    iter_range=[100, 200],\n",
+    "    optimal_solution=\"00011\",\n",
+    "    repetitions=1,\n",
+    "    init_type=\"random\",\n",
+    ")\n",
     "\n",
-    "temp = benchmark_data.rank(print_res = True)\n",
+    "temp = benchmark_data.rank(print_res=True)\n",
     "\n",
-    "_,rndFO=benchmark_data.evaluate()\n",
+    "_, rndFO = benchmark_data.evaluate()\n",
     "\n",
-    "print('Approximation ratio: ', sum(rndFO)/len(rndFO))\n",
+    "print(\"Approximation ratio: \", sum(rndFO) / len(rndFO))\n",
     "print(\"Variance: \", np.var(rndFO))"
    ]
   },
@@ -590,22 +616,23 @@
     }
    ],
    "source": [
-    "print('TQA')\n",
+    "print(\"TQA\")\n",
     "\n",
-    "benchmark_data = maxcut_instance.benchmark(qarg = QuantumVariable(len(G)),\n",
-    "                        depth_range = [1,2,3,4,5],\n",
-    "                        shot_range = [1000, 10000],\n",
-    "                        iter_range = [100, 200],\n",
-    "                        optimal_solution = '00011',\n",
-    "                        repetitions = 1,\n",
-    "                        init_type= 'tqa'\n",
-    "                        )\n",
+    "benchmark_data = maxcut_instance.benchmark(\n",
+    "    qarg=QuantumVariable(len(G)),\n",
+    "    depth_range=[1, 2, 3, 4, 5],\n",
+    "    shot_range=[1000, 10000],\n",
+    "    iter_range=[100, 200],\n",
+    "    optimal_solution=\"00011\",\n",
+    "    repetitions=1,\n",
+    "    init_type=\"tqa\",\n",
+    ")\n",
     "\n",
-    "temp = benchmark_data.rank(print_res = True)\n",
+    "temp = benchmark_data.rank(print_res=True)\n",
     "\n",
-    "_,tqaFO=benchmark_data.evaluate()\n",
+    "_, tqaFO = benchmark_data.evaluate()\n",
     "\n",
-    "print('Approximation ratio: ', sum(tqaFO)/len(tqaFO))\n",
+    "print(\"Approximation ratio: \", sum(tqaFO) / len(tqaFO))\n",
     "print(\"Variance: \", np.var(tqaFO))"
    ]
   },
@@ -644,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "38266ab8",
    "metadata": {},
    "outputs": [
@@ -658,30 +685,49 @@
    ],
    "source": [
     "from qrisp import QuantumArray, QuantumVariable\n",
-    "from qrisp.qaoa import QAOAProblem, maxcut_obj, create_maxcut_cl_cost_function, create_maxcut_cost_operator, RX_mixer\n",
+    "from qrisp.qaoa import (\n",
+    "    QAOAProblem,\n",
+    "    maxcut_obj,\n",
+    "    create_maxcut_cl_cost_function,\n",
+    "    create_maxcut_cost_operator,\n",
+    "    RX_mixer,\n",
+    ")\n",
     "import networkx as nx\n",
     "from operator import itemgetter\n",
     "\n",
     "G = nx.Graph()\n",
-    "G.add_edges_from([[0,3],[0,4],[1,3],[1,4],[2,3],[2,4]])\n",
+    "G.add_edges_from([[0, 3], [0, 4], [1, 3], [1, 4], [2, 3], [2, 4]])\n",
     "\n",
     "qarg = QuantumVariable(len(G))\n",
     "\n",
     "depth = 5\n",
     "\n",
-    "maxcut_instance = QAOAProblem(create_maxcut_cost_operator(G), RX_mixer, create_maxcut_cl_cost_function(G))\n",
+    "maxcut_instance = QAOAProblem(\n",
+    "    create_maxcut_cost_operator(G), RX_mixer, create_maxcut_cl_cost_function(G)\n",
+    ")\n",
     "\n",
-    "res = maxcut_instance.run(qarg, depth, max_iter = 50)\n",
+    "res = maxcut_instance.run(qarg, depth, max_iter=50)\n",
     "\n",
-    "best_cut, best_solution = min([(maxcut_obj(x,G),x) for x in res.keys()], key=itemgetter(0))\n",
+    "best_cut, best_solution = min(\n",
+    "    [(maxcut_obj(x, G), x) for x in res.keys()], key=itemgetter(0)\n",
+    ")\n",
     "\n",
     "res_str = list(res.keys())[0]\n",
     "print(\"QAOA solution: \", res_str)\n",
-    "best_cut, best_solution = (maxcut_obj(res_str,G),res_str)\n",
+    "best_cut, best_solution = (maxcut_obj(res_str, G), res_str)\n",
     "\n",
-    "#colors = ['r' if best_solution[node] == '0' else 'b' for node in G]\n",
-    "#nx.draw(G, with_labels = True, font_color='white', node_size=1000, font_size=22,\n",
-    "#        node_color = colors, pos=nx.bipartite_layout(G, [node for node in G if best_solution[node] == '0']))"
+    "\"\"\"\n",
+    "colors = [\"r\" if best_solution[node] == \"0\" else \"b\" for node in G]\n",
+    "nx.draw(\n",
+    "    G,\n",
+    "    with_labels=True,\n",
+    "    font_color=\"white\",\n",
+    "    node_size=1000,\n",
+    "    font_size=22,\n",
+    "    node_color=colors,\n",
+    "    pos=nx.bipartite_layout(G, [node for node in G if best_solution[node] == \"0\"]),\n",
+    ")\n",
+    "\"\"\""
    ]
   },
   {
