--- a/documentation/source/general/tutorial/QAOAtutorial/MkCS.ipynb
+++ b/documentation/source/general/tutorial/QAOAtutorial/MkCS.ipynb
@@ -41,24 +41,27 @@
     "from qrisp import QuantumArray, QuantumVariable\n",
     "import numpy as np\n",
     "\n",
+    "\n",
     "class QuantumColor(QuantumVariable):\n",
     "\n",
-    "    def __init__(self, list_of_colors, one_hot_enc = True): \n",
-    "    \n",
+    "    def __init__(self, list_of_colors, one_hot_enc=True):\n",
+    "\n",
     "        self.list_of_colors = list_of_colors\n",
     "        self.one_hot_enc = one_hot_enc\n",
     "\n",
     "        if one_hot_enc:\n",
-    "            QuantumVariable.__init__(self, size = len(list_of_colors)) \n",
+    "            QuantumVariable.__init__(self, size=len(list_of_colors))\n",
     "        else:\n",
-    "            QuantumVariable.__init__(self, size = int(np.ceil(np.log2(len(list_of_colors)))))\n",
+    "            QuantumVariable.__init__(\n",
+    "                self, size=int(np.ceil(np.log2(len(list_of_colors))))\n",
+    "            )\n",
     "\n",
     "    def decoder(self, i):\n",
-    "    \n",
+    "\n",
     "        if not self.one_hot_enc:\n",
     "            return self.list_of_colors[i]\n",
     "        else:\n",
-    "            is_power_of_two = ((i & (i-1) == 0) and i != 0)\n",
+    "            is_power_of_two = (i & (i - 1) == 0) and i != 0\n",
     "\n",
     "            if is_power_of_two:\n",
     "                return self.list_of_colors[int(np.log2(i))]\n",
@@ -149,7 +152,7 @@
     "\n",
     "G = nx.Graph()\n",
     "G.add_nodes_from([0, 1, 2, 3])\n",
-    "G.add_edges_from([[0,3],[0,1],[0,2],[1,3],[1,2],[2,3]])\n",
+    "G.add_edges_from([[0, 3], [0, 1], [0, 2], [1, 3], [1, 2], [2, 3]])\n",
     "num_nodes = len(G.nodes)\n",
     "\n",
     "color_list = [\"red\", \"blue\", \"yellow\", \"green\"]"
@@ -173,15 +176,15 @@
    "outputs": [],
    "source": [
     "def mkcs_obj(color_array, G):\n",
-    "   \n",
+    "\n",
     "    cost = 1\n",
     "\n",
     "    for pair in list(G.edges()):\n",
     "\n",
     "        if color_array[pair[0]] != color_array[pair[1]]:\n",
-    "           cost *= 4\n",
-    "           # Instead of\n",
-    "           #cost += 1\n",
+    "            cost *= 4\n",
+    "            # Instead of\n",
+    "            # cost += 1\n",
     "\n",
     "    return -cost"
    ]
@@ -202,15 +205,15 @@
    "outputs": [],
    "source": [
     "def cl_cost_function(meas_res):\n",
-    "    \n",
+    "\n",
     "    energy = 0\n",
     "\n",
     "    for meas, prob in list(meas_res.items())[::-1]:\n",
-    "    \n",
+    "\n",
     "        obj_for_meas = mkcs_obj(meas, G)\n",
-    "            \n",
+    "\n",
     "        energy += obj_for_meas * prob\n",
-    "    \n",
+    "\n",
     "    return energy"
    ]
   },
@@ -232,11 +235,11 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "    \n",
-    "qarg = QuantumArray(qtype = QuantumColor(color_list), \n",
-    "                    shape = num_nodes) \n",
-    "    \n",
+    "\n",
+    "qarg = QuantumArray(qtype=QuantumColor(color_list), shape=num_nodes)\n",
+    "\n",
     "init_state = [random.choice(color_list) for _ in range(len(G))]\n",
+    "\n",
     "\n",
     "def initial_state_mkcs(qarg):\n",
     "    qarg[:] = init_state\n",
@@ -259,32 +262,38 @@
    "outputs": [],
    "source": [
     "from qrisp import cp, cx, mcp\n",
+    "\n",
+    "\n",
     "def apply_phase_if_eq(qcolor_0, qcolor_1, gamma):\n",
-    "    \n",
-    "    if qcolor_0.one_hot_enc !=  qcolor_1.one_hot_enc or len(qcolor_0) != len(qcolor_1):\n",
+    "\n",
+    "    if qcolor_0.one_hot_enc != qcolor_1.one_hot_enc or len(qcolor_0) != len(qcolor_1):\n",
     "        raise Exception(\"Tried to compare QuantumColors with differing encodings\")\n",
-    "    \n",
+    "\n",
     "    if qcolor_0.one_hot_enc:\n",
     "        for i in range(qcolor_0.size):\n",
     "            # If the i-th qubit is \"1\" for both variables they represent the same color\n",
     "            # In this case the cp gate applies a phase of 2*gamma\n",
-    "            cp(2*gamma, qcolor_0[i], qcolor_1[i])\n",
+    "            cp(2 * gamma, qcolor_0[i], qcolor_1[i])\n",
     "\n",
     "    else:\n",
     "        # If both quantum variables are in the same state the following cx gates will\n",
     "        # put qcolor_1 in the |0> state\n",
     "        cx(qcolor_0, qcolor_1)\n",
     "        # We apply the phase 2*gamma to the |0> state using a multi-controlled phase gate\n",
-    "        mcp(2*gamma, qcolor_1, ctrl_state = 0)\n",
+    "        mcp(2 * gamma, qcolor_1, ctrl_state=0)\n",
     "        # Revert the action of the cx gate\n",
     "        cx(qcolor_0, qcolor_1)\n",
-    "    \n",
+    "\n",
+    "\n",
     "def create_coloring_operator(G):\n",
-    "    \n",
+    "\n",
     "    def coloring_operator(quantumcolor_array, gamma):\n",
     "        for pair in list(G.edges()):\n",
-    "            apply_phase_if_eq(quantumcolor_array[pair[0]], quantumcolor_array[pair[1]], gamma)\n",
-    "    return coloring_operator "
+    "            apply_phase_if_eq(\n",
+    "                quantumcolor_array[pair[0]], quantumcolor_array[pair[1]], gamma\n",
+    "            )\n",
+    "\n",
+    "    return coloring_operator"
    ]
   },
   {
@@ -305,6 +314,7 @@
    "outputs": [],
    "source": [
     "from qrisp.qaoa import XY_mixer, RX_mixer\n",
+    "\n",
     "\n",
     "def apply_XY_mixer(quantumcolor_array, beta):\n",
     "    for qcolor in quantumcolor_array:\n",
@@ -333,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c3dd7c4f",
    "metadata": {},
    "outputs": [
@@ -364,22 +374,42 @@
     "\n",
     "coloring_operator = create_coloring_operator(G)\n",
     "\n",
-    "coloring_instance = QAOAProblem(coloring_operator, apply_XY_mixer, cl_cost_function) \n",
-    "#coloring_instance = QAOAProblem(coloring_operator, RX_mixer, cl_cost_function) #Use RX mixer for binary encoding\n",
+    "coloring_instance = QAOAProblem(coloring_operator, apply_XY_mixer, cl_cost_function)\n",
+    "# Use RX mixer for binary encoding\n",
+    "# coloring_instance = QAOAProblem(coloring_operator, RX_mixer, cl_cost_function) \n",
     "\n",
     "coloring_instance.set_init_function(initial_state_mkcs)\n",
     "\n",
-    "res = coloring_instance.run(qarg, depth, max_iter = 25)\n",
+    "res = coloring_instance.run(qarg, depth, max_iter=25)\n",
     "\n",
-    "best_coloring, best_solution = min([(mkcs_obj(quantumcolor_array,G),quantumcolor_array) for quantumcolor_array in res.keys()], key=itemgetter(0))\n",
+    "best_coloring, best_solution = min(\n",
+    "    [\n",
+    "        (mkcs_obj(quantumcolor_array, G), quantumcolor_array)\n",
+    "        for quantumcolor_array in res.keys()\n",
+    "    ],\n",
+    "    key=itemgetter(0),\n",
+    ")\n",
     "print(f\"Best string: {best_solution} with coloring: {-best_coloring}\")\n",
     "\n",
-    "best_coloring, res_str = min([(mkcs_obj(quantumcolor_array,G),quantumcolor_array) for quantumcolor_array in list(res.keys())[:5]], key=itemgetter(0))\n",
+    "best_coloring, res_str = min(\n",
+    "    [\n",
+    "        (mkcs_obj(quantumcolor_array, G), quantumcolor_array)\n",
+    "        for quantumcolor_array in list(res.keys())[:5]\n",
+    "    ],\n",
+    "    key=itemgetter(0),\n",
+    ")\n",
     "print(\"QAOA solution: \", res_str)\n",
-    "best_coloring, best_solution = (mkcs_obj(res_str,G),res_str)\n",
+    "best_coloring, best_solution = (mkcs_obj(res_str, G), res_str)\n",
     "\n",
     "colors = [res_str[node] for node in G.nodes()]\n",
-    "nx.draw(G, with_labels = True, font_color='white', node_size=1000, font_size=22, node_color = colors)"
+    "nx.draw(\n",
+    "    G,\n",
+    "    with_labels=True,\n",
+    "    font_color=\"white\",\n",
+    "    node_size=1000,\n",
+    "    font_size=22,\n",
+    "    node_color=colors,\n",
+    ")"
    ]
   },
   {
@@ -426,7 +456,15 @@
     }
    ],
    "source": [
-    "from qrisp.qaoa import QuantumArray, QuantumColor, QAOAProblem, mkcs_obj, create_coloring_operator, create_coloring_cl_cost_function, apply_XY_mixer\n",
+    "from qrisp.qaoa import (\n",
+    "    QuantumArray,\n",
+    "    QuantumColor,\n",
+    "    QAOAProblem,\n",
+    "    mkcs_obj,\n",
+    "    create_coloring_operator,\n",
+    "    create_coloring_cl_cost_function,\n",
+    "    apply_XY_mixer,\n",
+    ")\n",
     "import random\n",
     "import networkx as nx\n",
     "from operator import itemgetter\n",
@@ -434,22 +472,43 @@
     "depth = 3\n",
     "\n",
     "G = nx.Graph()\n",
-    "G.add_edges_from([[0,1],[0,4],[1,2],[1,3],[1,4],[2,3],[3,4]])\n",
+    "G.add_edges_from([[0, 1], [0, 4], [1, 2], [1, 3], [1, 4], [2, 3], [3, 4]])\n",
     "num_nodes = len(G.nodes)\n",
     "color_list = [\"red\", \"blue\", \"yellow\", \"green\"]\n",
     "init_state = [random.choice(color_list) for _ in range(len(G))]\n",
     "\n",
-    "qarg = QuantumArray(qtype = QuantumColor(color_list, one_hot_enc = True), shape = num_nodes) \n",
-    "mkcs_onehot = QAOAProblem(create_coloring_operator(G), apply_XY_mixer, create_coloring_cl_cost_function(G))\n",
-    "mkcs_onehot.set_init_function(lambda x : x.encode(init_state))\n",
+    "qarg = QuantumArray(qtype=QuantumColor(color_list, one_hot_enc=True), shape=num_nodes)\n",
+    "mkcs_onehot = QAOAProblem(\n",
+    "    create_coloring_operator(G), apply_XY_mixer, create_coloring_cl_cost_function(G)\n",
+    ")\n",
+    "mkcs_onehot.set_init_function(lambda x: x.encode(init_state))\n",
     "\n",
-    "res_onehot = mkcs_onehot.run(qarg, depth, max_iter = 25)\n",
+    "res_onehot = mkcs_onehot.run(qarg, depth, max_iter=25)\n",
     "\n",
-    "best_coloring, best_solution = min([(mkcs_obj(quantumcolor_array,G),quantumcolor_array) for quantumcolor_array in res_onehot.keys()], key=itemgetter(0))\n",
-    "best_coloring_onehot, res_str_onehot = min([(mkcs_obj(quantumcolor_array,G),quantumcolor_array) for quantumcolor_array in list(res_onehot.keys())[:5]], key=itemgetter(0))\n",
+    "best_coloring, best_solution = min(\n",
+    "    [\n",
+    "        (mkcs_obj(quantumcolor_array, G), quantumcolor_array)\n",
+    "        for quantumcolor_array in res_onehot.keys()\n",
+    "    ],\n",
+    "    key=itemgetter(0),\n",
+    ")\n",
+    "best_coloring_onehot, res_str_onehot = min(\n",
+    "    [\n",
+    "        (mkcs_obj(quantumcolor_array, G), quantumcolor_array)\n",
+    "        for quantumcolor_array in list(res_onehot.keys())[:5]\n",
+    "    ],\n",
+    "    key=itemgetter(0),\n",
+    ")\n",
     "\n",
     "colors = [res_str_onehot[node] for node in G.nodes()]\n",
-    "nx.draw(G, with_labels = True, font_color='white', node_size=1000, font_size=22, node_color = colors)"
+    "nx.draw(\n",
+    "    G,\n",
+    "    with_labels=True,\n",
+    "    font_color=\"white\",\n",
+    "    node_size=1000,\n",
+    "    font_size=22,\n",
+    "    node_color=colors,\n",
+    ")"
    ]
   },
   {
